# wlist

./: Main.hs  Parser.hs  README.md  wlist.cabal  wlist.hs
